# configdrift

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cli.js  eslint.config.mjs  package.json  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-code-review.yml  ci.yml  npm-publish.yml  pages.yml  publish.yml  release-audit.yml
src/configdrift/: __init__.py  cli.py  diff.py  loader.py
tests/: conftest.py  smoke.test.js  test_cli.py  test_coverage_gaps.py  test_diff.py  test_edge_cases.py  test_loader.py  test_loader_dotenv_export.py
